lspclient: avoid repeated restart of failing LSP server

BUG: 415847